# microsservico-encoder

./: .gitignore  docker-compose.yaml  init-db.sql
encoder-go/: Dockerfile  go.mod  go.sum
encoder-go/application/repositories/: job_repository.go  job_repository_test.go  video_repository.go  video_repository_test.go
encoder-go/application/services/: video_service.go  video_service_test.go
encoder-go/domain/: job.go  job_test.go  video.go  video_test.go
encoder-go/encoder/: go.mod
encoder-go/framework/database/: db.go
encoder-rust/: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml
encoder-rust/.sqlx/: query-307bb9e024e63d54ded1bf7ef7e037d2d75091113f9b17e63b8a8837ef209c5e.json  query-97fc8c5d8d09c6471ab325ca854399b856d4ccfbdb12d6525ef63bf89c9064f7.json
encoder-rust/migrations/: 20251228154112_add-job-and-video-migrate.sql
encoder-rust/src/: main.rs
encoder-rust/src/application/: mod.rs
encoder-rust/src/application/repositories/: job_repository.rs  repository_error.rs  repository_trait.rs  video_repository.rs
encoder-rust/src/application/services/: video_service.rs
encoder-rust/src/domain/: job.rs  mod.rs  video.rs
encoder-rust/src/framework/: mod.rs
encoder-rust/src/framework/database/: db.rs
