[package]
name = "encoder-rust"
version = "0.1.0"
edition = "2024"

# Otimizações de compilação
[profile.dev]
opt-level = 0
debug = 1          # Reduz tamanho dos símbolos de debug (0=none, 1=line-info, 2=full)
incremental = true

[profile.dev.package."*"]
opt-level = 2 # Compila dependências otimizadas mesmo em dev

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }


[dependencies.sqlx]
version = "0.8.6"
features = [
    "chrono",
    "derive",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "sqlite",
]
