[package]
name = "encoder-rust"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
google-cloud-storage = { package = "gcloud-storage", version = "1.0.0" }


[dependencies.sqlx]
version = "0.8.6"
features = [
    "chrono",
    "derive",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "sqlite",
]
